--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
               <p>//now that all the master branch is loaded, switch back to the branch you named</p>
               <p>>git checkout your_branch_name</p>
               <p>//push your branch</p>
-              <p>>git push</p>
+              <p>>git push --set-upstream origin your_branch_name</p>
               <br>
               <p>Now go on the github repo located here: https://github.com/mrterranova/CommitProject</p>
               <p>Click new pull request under <>Code</p>
