--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,7 @@
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-4" style="text-align: center;">Commit to Github</h1>
-          <p class="lead" style="text-align: center;">Add what you want to this repo. Images, gifs, css, text... (Please be respectful). This is a free for all to learn how to commit on github.</p>
+          <p class="lead" style="text-align: center; padding:0px 200px 0px 200px;">Add what you want to this repo. Images, gifs, css, text... (Please be respectful). This is a free for all to learn how to commit on github.</p>
           <br>
               <h3 style="text-align: center;">GIT HUB INSTRUCTIONS</h3>
               <div class="instructions">
